<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <TextView
        android:id="@+id/txtViewMyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:text="@string/my_account_title"
        android:textColor="@color/violet"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgViewProfilePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMyAccount" />

    <TextView
        android:id="@+id/txtViewEmailData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/editEmailHint"
        android:textColor="@color/violet"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProfilePic" />

    <TextView
        android:id="@+id/txtViewEmailDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:text="For now"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtViewEmailData"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProfilePic" />

    <TextView
        android:id="@+id/txtViewFNameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:text="@string/editFName"
        android:textColor="@color/violet"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewEmailData" />

    <TextView
        android:id="@+id/txtViewFNameDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="17dp"
        android:text="For Now"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtViewFNameData"
        app:layout_constraintTop_toBottomOf="@+id/txtViewEmailDB" />

    <TextView
        android:id="@+id/txtViewLNameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/editLName"
        android:textColor="@color/violet"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFNameData" />

    <TextView
        android:id="@+id/txtViewLNameDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="For Now"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtViewLNameData"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFNameDB" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/violet"
        android:text="@string/btnUpdateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLNameDB" />

    <ImageView
        android:id="@+id/imgViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:src="@drawable/nav_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />

    <TextView
        android:id="@+id/txtViewLogoutLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="180dp"
        android:clickable="true"
        android:text="@string/logout_legend"
        android:textColor="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>