<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Calmness Image -->
    <ImageView
        android:id="@+id/image_calmness"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/calmness_image"
        app:layout_constraintBottom_toTopOf="@+id/title_help"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/title_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help_plan"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_calmness" />

    <!-- Description Text -->
    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_help_plan_for_when_you_are_feeling_bad_you_can_add_contacts_breathing_exercises_and_more"
        android:textSize="16sp"
        android:background="@drawable/rounded_txtview"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/title_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/create_plan_button"
        android:layout_marginTop="8dp"/>

    <!-- Create Plan Button -->
    <Button
        android:id="@+id/create_plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_help_plan"
        app:layout_constraintBottom_toTopOf="@+id/view_plan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <!-- View Plan Button -->
    <Button
        android:id="@+id/view_plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/view_help_plan"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Optional: Add padding to the bottom to avoid overlap with the navigation bar -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
